<resources>
    <!-- global -->
    <string name="app_name">SafeWalk</string>
    <string name="cloud">cloud</string>
    <string name="airplane">airplane</string>
    <string name="lens">lens</string>
    <string name="edit">edit</string>
    <string name="question">\?</string>
    <string name="add">add</string>
    <string name="zero">0</string>
    <string name="good">good</string>
    <string name="bad">bad</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="emergency_call">긴급전화</string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="clear">clear</string>
    <string name="plus">+</string>

    <string name="naver_map_key">kolAzQiZCPl37GQlLV5R3fCbPvFY9F0oSPIQWZWm</string>
    <string name="naver_map_key_id">7fxx28ikcf</string>

    <string name="signin_input_password">비밀번호를 입력해 주세요</string>
    <string name="signin_input_email">이메일을 입력해 주세요</string>
    <string name="signin_signin">로그인</string>
    <string name="signin_signup">가입하기</string>
    <string name="signin_forget_account">이메일/비밀번호가 기억나지 않으신가요?</string>
    <string name="signin_not_member">아직 회원이 아니신가요?</string>
    <string name="signin_not_match_account">아이디 혹은 비밀번호가 일치하지 않습니다.</string>

    <string name="signup_email_description">이메일 형식의 아이디를 입력해 주세요.</string>
    <string name="signup_password_confirm">비밀번호 확인</string>
    <string name="signup_password_confirm_description">비밀번호 확인을 위해 한 번 더 입력해 주세요.</string>
    <string name="signup_emergency_call">긴급전화 (선택)</string>
    <string name="signup_emergency_call_description">긴급시 연락처를 \'-\'를 제외한 숫자로 입력</string>
    <string name="signup_required_agreement_info">개인정보 제공 동의 (필수)</string>
    <string name="signup_agreement">동의</string>
    <string name="signup_wrong_name_length">이름은 최소 두 글자 이상이여야 합니다.</string>
    <string name="signup_signup_two">회원가입</string>
    <string name="signup_finish_signup">회원가입이\n완료되었습니다.</string>
    <string name="signup_success_signup">어린이 안전 걸음맵의 회원가입이\n정상적으로 처리되었습니다.</string>
    <string name="signup_go_login">로그인 화면으로 이동</string>
    <string name="signup_not_corrent_format">올바른 형식이 아닙니다.</string>
    <string name="signup_required_input">필수 항목입니다.</string>
    <string name="signup_nickname_length">닉네임은 한글/영문/숫자로 구성된 4~8자 이여야 합니다.</string>
    <string name="signup_not_email">이메일 형식이 아닙니다.</string>
    <string name="signup_not_phonenumber">올바른 전화번호가 아닙니다.</string>
    <string name="signup_password_format">특수문자(!,@,$,%), 영문자, 숫자를 혼용하여 5~16자가 되어야 합니다.</string>
    <string name="signup_not_match_password">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_required_agree">필수 동의 사항입니다.</string>
    <string name="signup_title_one">우리아이\n안전 걸음 맵</string>
    <string name="signup_done">회원가입이\n완료되었습니다.</string>
    <string name="signup_done_description">어린이 안전 걸음맵의 회원가입이\n정상적으로 처리 되었습니다.</string>
    <string name="signup_go_login_screen">로그인 화면으로 이동</string>

    <string name="ping_add_danger">위험지 등록</string>
    <string name="ping_add_picture">사진을 추가해주세요.</string>
    <string name="ping_warning">타인에게 불쾌감을 유발하거나 무관한 이미지를 업로드 할 시\n별도의 고지 없이 삭제/제재 조치를 취할 수 있습니다.</string>
    <string name="ping_location">위치</string>
    <string name="ping_preview_location">충청남도 서산시 석림동 석림1로 20</string>
    <string name="ping_danger_level">위험 등급</string>
    <string name="ping_preview_danger_level_zero">0.0</string>
    <string name="ping_preview_danger_level_middle">2.5</string>
    <string name="ping_tag">태그</string>
    <string name="ping_add_done">등록 완료</string>
    <string name="ping_danger_info">위험지역 세부정보</string>
    <string name="ping_vote_people">(0)</string>
    <string name="ping_preview_vote_people">(72)</string>
    <string name="ping_check_information_good">이 정보가 유용하셨나요?</string>
    <string name="ping_preview_good_count">68</string>
    <string name="ping_preview_bad_count">17</string>

    <string name="error_network">네트워크 통신에 실패했습니다.</string>

    <string name="exception_except">오류가 발생했습니다 😔</string>
    <string name="exception_preview_except">FATAL EXCEPTION: main exception</string>

    <string name="setting_preview_nickname">평산동불주먹</string>
    <string name="setting_preview_tag">안전지킴이</string>
    <string name="setting_preview_name">성빈</string>
    <string name="setting_preview_email">sungbin.dev@gmail.com</string>
    <string name="setting_preview_emergency">112</string>
    <string name="setting_own_post">내가 쓴 글</string>
    <string name="setting_notification_setting">알림 설정</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_opensource_license">오픈소스 라이선스</string>

    <string name="map_route_search">안전 경로 탐색하기</string>
    <string name="map_declaration">이 위치 신고하기</string>
    <string name="map_permission_denied">위치 권한이 있어야 현재 위치 조회가 가능합니다.\n앱 설정에서 권한 사용을 허락해 주세요.</string>
    <string name="map_permission_need">현재 사용자의 위치를 조회하기 위해서 위치 권한이 필요합니다.</string>
    <string name="map_need_gps">위치 조회를 위해 위치 서비스 사용이 필요합니다.</string>

    <string name="tag_preview_label">어두운 거리</string>
    <string name="tag_input">태그 입력</string>
    <string name="menu_information">내 정보</string>
    <string name="menu_add_danger">위험 구역 등록</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_setting">환경설정</string>

</resources>
