<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_all_round_30"
    android:backgroundTint="@color/colorWhite"
    android:overScrollMode="never"
    android:padding="@dimen/margin_default"
    android:scrollbars="none"
    android:theme="@style/AppTheme">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping_danger_info"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile_container"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_half"
            android:background="@color/colorTwiceLightGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ping_add_picture"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_lens" />

            <ImageView
                android:id="@+id/iv_lens"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/lens"
                android:src="@drawable/lens"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorLightGray" />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_half"
                android:background="@drawable/bg_all_round_30"
                android:backgroundTint="@color/colorLightGray"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/colorWhite" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/tv_label_location"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/margin_default"
            android:src="@drawable/ping_address"
            android:text="@string/ping_location"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_profile_container" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_location"
            app:layout_constraintStart_toEndOf="@+id/tv_label_location"
            app:layout_constraintTop_toTopOf="@+id/tv_label_location"
            tools:text="@string/ping_preview_location" />

        <TextView
            android:id="@+id/tv_label_danger_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice"
            android:text="@string/ping_danger_level"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_location" />

        <LinearLayout
            android:id="@+id/ll_danger_level_container"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_half"
            android:weightSum="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_danger_level">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1"
                tools:src="@drawable/skull3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1"
                tools:src="@drawable/skull3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1"
                tools:src="@drawable/skull2" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_danger_level_voted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ping_preview_danger_level_zero"
            android:textColor="@color/colorBlack"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="@+id/ll_danger_level_container"
            app:layout_constraintStart_toEndOf="@+id/ll_danger_level_container"
            app:layout_constraintTop_toTopOf="@+id/ll_danger_level_container"
            tools:text="@string/ping_preview_danger_level_middle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:text="@string/ping_vote_people"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_danger_level_voted"
            app:layout_constraintStart_toEndOf="@+id/tv_danger_level_voted"
            tools:text="@string/ping_preview_vote_people" />

        <TextView
            android:id="@+id/tv_danger_level_hint"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="@dimen/margin_half"
            android:layout_marginTop="@dimen/margin_twice"
            android:background="@drawable/bg_all_round_30"
            android:backgroundTint="@color/colorSky"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_danger_level"
            app:layout_constraintStart_toEndOf="@+id/tv_label_danger_level"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_location" />

        <TextView
            android:id="@+id/tv_label_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice"
            android:text="@string/ping_tag"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_danger_level_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tag"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_tag"
            app:spanCount="3"
            tools:listitem="@layout/layout_tag" />

        <LinearLayout
            android:id="@+id/ll_footer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_tag">

            <TextView
                android:id="@+id/tv_label_information_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ping_check_information_good" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:background="@drawable/bg_all_round_8"
                android:backgroundTint="@color/colorSky"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tv_good_count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_left_round_8"
                    android:backgroundTint="@color/colorSky"
                    android:gravity="center"
                    android:maxLength="2"
                    android:padding="@dimen/margin_twice_half"
                    android:text="@string/zero"
                    android:textColor="@color/colorWhite"
                    tools:text="@string/ping_preview_good_count" />

                <ImageView
                    android:id="@+id/iv_good"
                    android:layout_width="35dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/good"
                    android:padding="@dimen/margin_twice_half"
                    android:src="@drawable/good" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_half"
                    android:background="@drawable/bg_all_round_8"
                    android:backgroundTint="@color/colorLightRed"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_bad"
                        android:layout_width="35dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/bad"
                        android:padding="@dimen/margin_twice_half"
                        android:scaleX="-1"
                        android:src="@drawable/bad" />

                    <TextView
                        android:id="@+id/tv_bad_count"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_right_round_8"
                        android:backgroundTint="@color/colorLightRed"
                        android:gravity="center"
                        android:maxLength="2"
                        android:padding="@dimen/margin_twice_half"
                        android:text="@string/zero"
                        android:textColor="@color/colorWhite"
                        tools:text="@string/ping_preview_bad_count" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
