<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_all_round_30"
    android:backgroundTint="@color/colorWhite"
    android:theme="@style/AppTheme"
    android:overScrollMode="never"
    android:padding="@dimen/margin_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ping_add_danger"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile_container"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_half"
            android:background="@color/colorTwiceLightGray"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ping_add_picture"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_lens"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_lens"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/lens"
                android:src="@drawable/lens"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorLightGray" />

            <TextView
                android:id="@+id/tv_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ping_warning"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_lens"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/ping_location"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_profile_container" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_location"
            app:layout_constraintEnd_toStartOf="@+id/iv_edit"
            app:layout_constraintStart_toEndOf="@+id/tv_label_location"
            app:layout_constraintTop_toTopOf="@+id/tv_label_location"
            tools:text="@string/ping_preview_location" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_outline_edit_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_location" />

        <TextView
            android:id="@+id/tv_label_danger_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice"
            android:text="@string/ping_danger_level"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_location" />

        <LinearLayout
            android:id="@+id/ll_danger_level_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_half"
            android:weightSum="6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_danger_level">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1"
                tools:src="@drawable/skull3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1"
                tools:src="@drawable/skull3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1"
                tools:src="@drawable/skull2" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ping_danger_level"
                android:src="@drawable/skull1" />

            <TextView
                android:id="@+id/tv_danger_level"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ping_preview_danger_level_zero"
                android:textColor="@color/colorBlack"
                android:textSize="32sp"
                tools:text="@string/ping_preview_danger_level_middle" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_danger_level_hint"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/margin_half"
            android:layout_marginTop="@dimen/margin_twice"
            android:background="@drawable/bg_all_round_30"
            android:backgroundTint="@color/colorSky"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_danger_level"
            app:layout_constraintStart_toEndOf="@+id/tv_label_danger_level"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_location" />

        <TextView
            android:id="@+id/tv_label_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_twice"
            android:text="@string/ping_tag"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_danger_level_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tag"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_tag" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ping_add_done"
            android:layout_marginTop="@dimen/margin_twice"
            app:cornerRadius="@dimen/margin_default"
            android:textColor="@color/colorBrown"
            app:layout_constraintTop_toBottomOf="@+id/rv_tag" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
